[package]
name = "rustbucket"
version = "0.1.0"
edition = "2024"

[dependencies]
async-recursion = "1.1.1"
atoi = "2.0.0"
bytes = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
mimalloc = "0.1"
ahash = "0.8"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3

